# omnihook

./: LICENSE  README.md  ensure_omnihook.sh  example-settings.json  pyproject.toml  quickstart.sh  uninstall.sh
omnihook/: __main__.py  app.py  cli.py  handlers.py  machine.py  models.py  store.py
tests/: test_crash_harness.py  test_uat_isolation.py
