[project]
name = "omnihook"
version = "0.1.0"
description = "Standalone hook server for Claude Code — finite state machine with durable execution"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "pydantic>=2.0",
]

[project.scripts]
omnihook = "omnihook.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
