[project]
name = "omnihook"
version = "0.1.0"
description = "Standalone hook server for Claude Code — finite state machine with durable execution"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "fastapi[standard]>=0.115",
]

[project.scripts]
omnihook = "omnihook.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.15.6",
]
